--- a/wp-content/themes/cleverclip/styles/pages/clients/highlights.scss
+++ b/wp-content/themes/cleverclip/styles/pages/clients/highlights.scss
@@ -1,6 +1,7 @@
 .clients__highlights {
   position: relative;
   z-index: 2;
+  padding: 3rem 0;
 }
 
 .clients__highlights__wrapper {
